# storytangl

./: .coderabbit.yaml  .dockerignore  .drone.yml  .gitattributes  .gitignore  .readthedocs.yaml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  LICENSE  README.md  TEST_REFACTORING_PLAN.md  TEST_REFACTORING_SUMMARY.md  VERSIONS.md  pyproject.toml  settings.toml
.githooks/: pre-commit
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml  docker-build-smoke.yml  redis-smoke.yml  remote-backend-smoke.yml  web-client.yml
apps/renpy/: README.md
apps/web/: .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  babel.config.cjs  eslint.config.js  index.html  package.json  tsconfig.json
apps/web/src/: App.vue  (+3 more)
apps/web_next/: .env.example  .gitignore  README.md  eslintrc.cjs  gitignore  package.json  reset-web-env.sh  tsconfig.json  tsconfig.node.json  vite.config.ts
brand/: README.md  StoryTangl-Brand-Sheet.html  USAGE.md
brand/assets/: cli-splash.txt  type.css
codex-skills/ast-grep/: SKILL.md
deployment/docker/: .env.example  Dockerfile  docker-compose.yaml  dokku_setup.md  reference.env
docs/: .gitignore  legacy_core_inventory.md  legacy_feature_inventory.md  narrative_theory_notes.md  overview.md  package_organization.md  requirements.txt
docs/api/: world.md
docs/notes/: common_pitfalls.md  core_vm_story_service_simplification_plan.md  hookable_processes.md  legacy_core_inventory.md  legacy_feature_inventory.md  media_client.md  media_modernization_plan.md  media_resurrection_plan.md  mvp_progress_review_3.md  narrative_theory_notes.md  provisioner_design.md  service_layer.rst  skip_xfail_triage.md  story38_action_plan.md  story_concept_strategy.rst
docs/source/: conf.py  index.rst  overview.md  project_overview32.md  project_overview33.md  project_overview37.md
docs/src/: conf.py  index.rst
docs/tests/: test_sphinx_build.py
docs/triage/: skip_xfail_triage.md
engine/src/: organization.md
engine/tests/: AGENTS.md  conftest.py  fake_types.py  test_config_helpers.py  test_package_distribution.py
scratch/: .drone.yml  AGENTS.md  achievement.py  ang_ir.py  annealing_synthesis_v38.md  app_service_manager.py  base_handler.py  components.yaml  detangl.py  dispatch_v37.py  guidelines.md  has_demographic.py  iterable_instances.py  ledger_envelope_x.py  media_creators_org.yaml  node_component.py  provisioning_old.py  services-x.py  ssb_graph.md  story_org.yaml  test_record.py  test_world_controller_integration.py
scratch/adapters/: tangl2md.py
scratch/docs/: overview.md  package_organization-2.md  st33_overview.md  st_overview.md  st_overview2.md
scratch/lang/: determinate.py  pronoun.d_enum.py  pronoun.old.py  spell_check.py  tracking_jinja.py
scratch/legacy/: class_source_dumper.py  code_review_dumper.py  ctx_proxies.py  ctx_proxy.py  handler-v371.py  test_journal.py  test_service_manager_ledger.py
scratch/md2yaml/: README.md  __init__.py  convert.py  node.py  untree.py
scratch/mechanics/: has_demographic.py
scratch/media/: __init__.py  annotate_images.py  media_org.yaml  media_role_v23.py  media_spec_1.py  media_spec_3.py  notes.md  notes_v32.md  protocols.py  test_media_resource.py  test_svg_forge.py
scratch/overview/: 0-outline.md  1-intro.md  3-ang.md  4-ref_impl.md  4-ref_impl_dsp.md
scratch/overviews/: ledger_persistence_plan.rst  mvp_action_items.md  notes_v34.md  overview_revised.md  package_organization.md  planning_phase_roadmap.md  project_overview37.md  project_overview37a.md  st_overview.md  st_overview2.md  tangl_spec.md
scratch/pending-dispatch/: func_info.py  notes_v34.md
scratch/pending-story/: scene.py  trade_handler.py
scratch/utils/: deep_merge.py  enum_utils.py  flatten_list.py  inheritance_aware.py  make_repr.py  set_dict.py
scripts/: audit_cutover_edges.py  code_review_dumper.py  comfy_smoke_test.py  cutover_import_allowlist.txt  dump_code.py  export_openapi3.py  export_schemas.py  repomix_bundle.py  setup_reference_world.py
tangl/: config.py  defaults.toml  info.py  type_hints.py
tangl/core/: __init__.py  entity.py  graph.py  handler.py  registry.py  singleton.py  task_handler.py  wrapped_singleton.py
tangl/service/: response_models.py
tangl/utils/: app_uptime.py  bookmarked_list.py  bookmarked_list2.py  dereference_obj_cls.py  enum_plus.py  hash_secret.py  rejinja.py  setup_yaml.py
tests/: fake_types.py  test_entity.py  test_graph.py  test_wrapped_singleton.py
tests/core/: test_task_handler.py
tests/rest/: test_content_response.py
tests/service/: test_api_endpoints.py  test_content_fragment.py  test_service_manager.py  test_story_controller_integration.py  test_world_controller_integration.py
tests/story/: test_story_controller.py  test_world_controller.py
tests/test_core/: test_entity.py  test_registry.py  test_singleton.py  test_task_handler.py  test_wrapped_singleton.py
tests/utils/: test_bookmarked_list.py  test_conf.py  test_get_code_name.py  test_is_valid_uuid.py  test_rejinja.py  test_shelved2.py
worlds/: .gitattributes  README.md  validate.py
worlds/adventure_sandbox_slice/: script.yaml  world.yaml
worlds/bag_rps_pit/: script.yaml  world.yaml
worlds/blackjack_parlour/: script.yaml  world.yaml
worlds/colony_loop/: script.yaml  world.yaml
worlds/composed_beat_demo/: README.md  script.yaml  world.yaml
worlds/coronate_the_regent/: script.yaml  world.yaml
worlds/credential_gate/: README.md  credential_types.reference.yaml  script.yaml  world.yaml
worlds/ed_queue_demo/: script.yaml  world.yaml
worlds/hall_monitor/: README.md  credential_types.yaml  script.yaml  world.yaml
worlds/incremental_yard/: script.yaml  world.yaml
worlds/kim_tray/: script.yaml  world.yaml
worlds/logic_demo/: README.md  script.yaml  world.yaml
worlds/reference/: .gitattributes  README.md  script.yaml  world.yaml
worlds/reference_world/: config.toml
worlds/renpy_demo/: script.yaml  world.yaml
worlds/rps_tavern/: script.py  script.yaml  world.yaml
worlds/twine_logic_demo/: README.md  story.twee  world.yaml
worlds/twine_reference/: story.twee  world.yaml
(+3782 files in other folders)
