[tool.poetry]
name = "StoryTangl"
version = "3.2.0"
description = "The abstract narrative graph lib for interactive stories"
authors = ["derek <derek.merck@gmail.com>"]
readme = "README.md"
packages = [
    { include = "tangl" },
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
Documentation = "https://readthedocs.org/derekmerck/tangl/docs"
Repository    = "https://github.com/derekmerck/tangl"

[tool.poetry.scripts]
cli = "tangl.apps.cli.__main__:main"
serve = "tangl.apps.rest.__main__:main"
docs = "sphinx.cmd.build:main"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.10.6"
shortuuid = "^1.0.13"
dynaconf = "^3.2.7"
pyyaml = "^6.0.2"

# text
jinja2 = "^3.1.5"
markdown-it-py = "^3.0.0"
#humanize = "^4.10.0"
#nameparser = "^1.1.3"

# api
requests = "^2.32.3"

# raster images
pillow = "^11.1.0"

# vector images
#lxml = "^5.3.0"

[tool.poetry.group.server]
optional = true

[tool.poetry.group.server.dependencies]
# rest
fastapi = "^0.114.0"
uvicorn = "^0.30.6"

# cli
cmd2 = "^2.4.3"

# dbs
redis = "^5.0.1"
pymongo = "^4.6.0"

[tool.poetry.group.dev.dependencies]
# parsing
toml = "^0.10.2"

# testing
pytest = "^8.3.4"
pytest-cov = "^4.1.0"     # coverage plugin for pytest
#httpx = "^0.26.0"         # for fastapi testing

# docs
sphinx = "^8.1.3"

# lang
#beautifulsoup4 = "^4.12.3"  # beautiful soup

# graphing and visualization
#networkx = "^3.4.2"
#matplotlib = "^3.10.0"

# cli group
cmd2 = "^2.4.3"

# rest group
#fastapi = "^0.114.0"
#uvicorn = "^0.30.6"
#cmd2-ext-test = "^2.0.0"

# db group
redis = "^5.0.1"
pymongo = "^4.6.0"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
testpaths = [
    "tests",               # base tests
#    "worlds/*/tests"       # sample world tests

]
pythonpath = [
    "tangl",
]
norecursedirs = [
    "tmp",
    "old",
    "working",
    "scratch",
]
# If desired, cov can be invoked for all test sets by adding default opts to pytest
# commenting this out requires explicit cli invocation for specific test suites
#addopts = [
#    "--cov",
#    "--cov-config=pyproject.toml",
##    "--cov-report=term",
#    "--cov-report=html"
#]

[tool.coverage.run]
relative_files = true
source_pkgs = [ "tangl" ]
omit = [
    "*/tests/*",
    "*/tmp/*",
    "*/old/*",
    "*/working/*",
    "*/scratch/*",
]

[tool.coverage.report]
skip_empty = true
# Regexes for lines to exclude from consideration
exclude_also = [
    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self\\.debug",
    "if TYPE_CHECKING:",
    "def generate_stub\\(\\):",
    "logger\\.debug",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",
    "except ImportError",

    # Ignore error handling
    "except Exception as e",  # this is almost always adding info to a raise
    "raise",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",

    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",
    "@BaseHandler\\.task_signature"
    ]

[tool.coverage.html]
directory = "html_cov"

