[tool.poetry]
name = "StoryTangl"
version = "3.7.2"
description = "The abstract narrative graph lib for interactive stories"
authors = ["TangleDev <dev@storytan.gl>"]
readme = "README.md"
packages = [
    { include = "tangl", from = "engine/src" },
    { include = "tangl", from = "apps/cli/src" },
    { include = "tangl", from = "apps/server/src" },
#    { include = "sample_world", as = "tangle.worlds.sample_world" }
]

# todo: build web client and include it as static files with app/server dist

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
Documentation = "https://readthedocs.org/tangldev/storytangl/docs"
Repository    = "https://github.com/tangldev/storytangl"

[tool.poetry.scripts]
cli = "tangl.apps.cli.__main__:main"
serve = "tangl.apps.rest.__main__:main"
docs = "sphinx.cmd.build:main"

[tool.poetry.dependencies]
python = "^3.13"
pydantic = "^2.10.6"
shortuuid = "^1.0.13"
dynaconf = "^3.2.7"
pyyaml = "^6.0.2"
wrapt = "^1.17.3"

# text
jinja2 = "^3.1.5"
markdown-it-py = "^3.0.0"
nameparser = "^1.1.3"
humanize = "^4.12.2"

# api
requests = "^2.32.3"

# raster images
pillow = "^11.1.0"

# vector images
lxml = "^5.3.1"

[tool.poetry.group.server]
optional = true

[tool.poetry.group.server.dependencies]
# rest
fastapi = "^0.114.0"
uvicorn = "^0.30.6"

# cli
cmd2 = "^2.4.3"

# dbs
redis = "^5.0.1"
pymongo = "^4.6.0"

[tool.poetry.group.dev.dependencies]
# parsing
toml = "^0.10.2"

# testing
pytest = "^8.3.4"
pytest-cov = "^4.1.0"     # coverage plugin for pytest
httpx = "^0.28.1"         # for fastapi testing

# lang
beautifulsoup4 = "^4.12.3"  # beautiful soup
pattern = "^0.0.1a0"        # this is a very heavy dependency

# graphing and visualization
#networkx = "^3.4.2"
#matplotlib = "^3.10.0"

# rest
fastapi = "^0.114.0"
uvicorn = "^0.30.6"

# cli
cmd2 = "^2.4.3"

# dbs
redis = "^5.0.1"
pymongo = "^4.6.0"
webuiapi = "^0.9.17"

# docs - sphinx now included in testing
sphinx = "^8.1.3"
myst-parser = "^4.0.0"
furo = "^2024.8.6"
sphinx-markdown-builder = "^0.6.8"
linkify-it-py = "^2.0.3"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^8.1.3"
myst-parser = "^4.0.0"
furo = "^2024.8.6"
sphinx-markdown-builder = "^0.6.8"
linkify-it-py = "^2.0.3"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
testpaths = [
    "engine/tests",               # base tests
    "docs/tests",                 # docs tests
#    "apps/**/tests",             # all apps tests
    "apps/cli/tests",             # cli tests
    "apps/server/tests"           # rest server tests
#    "worlds/*/tests"       # sample world tests
]
#pythonpath = [
#    "tangl",
#]
norecursedirs = [
    "tmp",
    "old",
    "working",
    "scratch",
]
# If desired, cov can be invoked for all test sets by adding default opts to pytest
# commenting this out requires explicit cli invocation for specific test suites
#addopts = [
#    "--cov",
#    "--cov-config=pyproject.toml",
#    "--cov-report=term",
#    "--cov-report=html"
#]

[tool.coverage.run]
relative_files = true
source_pkgs = [ "tangl" ]
omit = [
    "*/tests/*",
    "*/tmp/*",
    "*/old/*",
    "*/working/*",
    "*/scratch/*",
]

[tool.coverage.report]
skip_empty = true
# Regexes for lines to exclude from consideration
exclude_also = [
    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self\\.debug",
    "if TYPE_CHECKING:",
    "def generate_stub\\(\\):",
    "logger\\.debug",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",
    "except ImportError",

    # Ignore error handling
    "except Exception as e",  # this is almost always adding info to a raise
    "raise",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",

    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",
    "@ApiEndpoint\\.register"
    ]

[tool.coverage.html]
directory = "html_cov"

